--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid shadow">
+	<div class="container-fluid shadow bg-light">
 		<div class="row px-5 py-3">
 			<div class="col-lg-4">
 				<i class="fas fa-video"></i> Bonjour mes amis
