--- a/table.html
+++ b/table.html
@@ -54,6 +54,9 @@
 					</div>
 			</div>
 		</div>
+
+		<div class="separareur"></div>
+		
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-3">
